--- a/css/style.css
+++ b/css/style.css
@@ -5,37 +5,40 @@
     padding: 0;
 }
 body{
-    background-color: #FFE53B;
+    /*background-color: #FFE53B;
     background-image: linear-gradient(147deg, #FFE53B 0%, #FF2525 74%);
 
-    /* 
+    
     background: linear-gradient(to right, #0575e6, #021b79);
     */
+
+    background-image: url(D:/DEV/JS%20Projects/My-To-do/images/305.jpg);
+    background-size: 100% auto;
+    background-position:left bottom; 
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
     background-size: cover;
     background-attachment: fixed;
-
 }
-th, h4, h1, h2, .btn , .remove, li, .form-control, small{
+
+th, h4, h1, h2, .btn , .remove, li, .form-control, .container, small{
     font-family: 'Montserrat', sans-serif;
     font-weight: 600;
     margin: 15px;
 }
 
 h2{
-    font-size: 32px;
+    font-size: 30px;
     font-weight: 600;
-    opacity: .4;
-    color: #fff;
+    font-style: italic;
+    color: #000;
+    opacity: .7;
 }
 
 h1{
     font-size: 40px;
     font-weight: 800;
-    font-style: italic;
-    opacity: .4;
     color: #fff;
 }
 
@@ -71,21 +74,42 @@ h1, #msg{
 }
 
 li {
+    margin: 5px;
     display: flex;
     justify-content: space-between;
     align-items: center;
     list-style-type: none;
     width: 600px;
     text-align: left;
-    font-size: 18px;
-    padding-left: 30px;
-    padding-right: 0;
+    height: 46px;
+    color: #fff;
+    font-size: 16px;
+    font-weight: 400;
+}
+
+.container-blur{
+    border-radius: 5px;
+    padding: 0;
+    backdrop-filter: blur(15px) opacity(.7);
+}
+
+.container-blur:hover{
+    border-radius: 5px;
+    padding: 0;
+    backdrop-filter: blur(20px) opacity(.6);
 }
 
 ul{
     padding-bottom: 30px;
 }
 
+.remove{
+    width: 30px;
+    height: 30px;
+    background: url(D:/DEV/JS%20Projects/My-To-do/images/icon-delete.png) no-repeat;
+    border-style: none;
+
+}
 
 .footer{
     display: flex;
@@ -95,8 +119,8 @@ ul{
     position: fixed;
     bottom: 0px;
     width: 100%;
-    margin-top: 10%;
-    background-color: #FF2525;
+    backdrop-filter: blur(8px) opacity(.7);
+    height: 60px;
 }
 
 table{
@@ -115,17 +139,14 @@ small{
     align-items: baseline;
 }
 
-.btn, .remove{
+.btn{
     height: 40px;
-    width: 100px;
-    background-color: #fff;
-    opacity: .4;
-    border-style: solid;
-    border-width: 2px;
-    border-color: transparent;
+    width: 110px;
     color: #000;
+    margin: 0;
     border-radius: 5px;
-    /*filter: blur(1px);*/  
+    border-color: transparent;
+    margin-left: 9px;
 }
 
 .input-form{
@@ -135,37 +156,15 @@ small{
     border-color: transparent;
     border-radius: 5px;
     height: 36px;
-    opacity: .4;
     color: #000;
     width: 520px;
 }
 
-.wrap {
-    /* Quebra a linha assim que um dos flex itens não puder mais ser compactado. */
-    flex-wrap: wrap;
-  }
-
-li{
-    background-color: #fff;
-    border-style: solid;
-    border-width: 2px;
-    border-color: transparent;
-    border-radius: 5px;
-    height: 36px;
-    color: #000;
-    opacity: .8;
-    font-size: 16px;
-}
-
 .form-control text{
     color: #000;
-    opacity: 1;
 }
 
-.btn:hover, .remove:hover, .input-form:hover, li:hover{
-    color: #000;
-    opacity: 1;
-}
+
 
 #animatedfadeIn{
     height: 38px;
